--- a/index.html
+++ b/index.html
@@ -1,60 +1,101 @@
-<!DOCTYPE html>
+<<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> CSS Crash Course Flexbox Training</title>
-    <link rel="stylesheet" href="./style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Flexbox Tutorial</title>
+  <link href="./reset.css" type="stylesheet" />
+  <style>
+    :root {
+      --primary-color: green;
+    }
+
+    body {
+      font-family: Arial, sans-serif;
+      margin: 20px;
+      border: 2px dashed var(--primary-color)
+    }
+
+    .container {
+      display: flex;
+      border: 2px solid #000;
+      height: 300px;
+      margin-bottom: 40px; /* Increased margin for spacing */
+    }
+
+    .box {
+      background-color: #76b5c5;
+      border: 2px solid #444;
+      color: white;
+      padding: 20px;
+      font-size: 1.2rem;
+      text-align: center;
+      margin: 5px;
+    }
+    h2, h3 {
+      margin-top: 40px; /* Increased margin for spacing */
+    }
+  </style>
 </head>
-
-<div> </div>
 <body>
-<header class="header">
-    <button class="header__button header__button--border" style="flex-grow: 1;"> Click me 1</button>
-    <button id="button2" class="header__button">Click me 2</button>
-    <button class="header__button header__button--border">Click me 3</button>
-</div>
-<h1> Flex Wrap </h1>
-<div class="container" stle="flex-wrap: wrap;" >
-    <div class="box" style="flex: 1 1 100px;"  >Box 1 </div>
-    <div class="box" style="flex: 1 1 100px;"  >Box 2 </div>
-    <div class="box" style="flex: 1 1 100px"  >Box 3 </div>
-    <div class="box" style="flex: 1 1 100px"  >Box 4 </div>
+  <h1>Flexbox CSS Tutorial</h1>
 
-</div>
-<h2> Align Content </h2>
-<div class="container" style="flex-wrap: wrap; align-content: space-between;" >
-    <div class="box" style="flex: 1 1 100px;"  >Box 1 </div>
-    <div class="box" style="flex: 1 1 100px;"  >Box 2 </div>
-    <div class="box" style="flex: 1 1 100px;"  >Box 3  </div>
-    <div class="box" style="flex: 1 1 100px;"  >Box 4 </div>
+  <h2>1. Basic Flexbox Container</h2>
+  <div class="container">
+    <div class="box">Box 1</div>
+    <div class="box">Box 2</div>
+    <div class="box">Box 3</div>
+  </div>
 
-</div>
-<h3> Flex Grow Shrink and Basis </h3>
-<div class="container" >
-    <div class="box" style="flex-grow: 1;"  >Box 1 </div>
-    <div class="box" style="flex-basis: 100px;" >Box 2 </div>
-    <div class="box" style="flex-grow: 3;"  >Box 3 </div>
+  <h2>2. Flex Direction</h2>
+  <div class="container" style="flex-direction: column;">
+    <div class="box">Box 1</div>
+    <div class="box">Box 2</div>
+    <div class="box">Box 3</div>
+  </div>
 
-</div>
-<h2> Order </h2>
-<div class="container">
-<div class="box" style="order: 2;"  >Box 1 </div>
-<div class="box" style="order: 1;"  >Box 2 </div>
-<div class="box" style="order: 3;"  >Box 3 </div>
+  <h2>3. Justify Content</h2>
+  <div class="container" style="justify-content: space-between;">
+    <div class="box">Box 1</div>
+    <div class="box">Box 2</div>
+    <div class="box">Box 3</div>
+  </div>
 
-</div>
+  <h2>4. Align Items</h2>
+  <div class="container" style="align-items: center;">
+    <div class="box">Box 1</div>
+    <div class="box">Box 2</div>
+    <div class="box">Box 3</div>
+  </div>
 
+  <h2>5. Flex Wrap</h2>
+  <div class="container" style="flex-wrap: wrap;">
+    <div class="box" style="flex: 1 1 100px;">Box 1</div>
+    <div class="box" style="flex: 1 1 100px;">Box 2</div>
+    <div class="box" style="flex: 1 1 100px;">Box 3</div>
+    <div class="box" style="flex: 1 1 100px;">Box 4</div>
+  </div>
 
-<div>
-<h3> Pseudo Class </h3>
+  <h2>6. Align Content</h2>
+  <div class="container" style="flex-wrap: wrap; align-content: space-between;">
+    <div class="box" style="flex: 1 1 100px;">Box 1</div>
+    <div class="box" style="flex: 1 1 100px;">Box 2</div>
+    <div class="box" style="flex: 1 1 100px;">Box 3</div>
+    <div class="box" style="flex: 1 1 100px;">Box 4</div>
+  </div>
 
-<button class ="Test">
-    TESTING
-    
-</div>
+  <h2>7. Flex Grow, Shrink, and Basis</h2>
+  <div class="container">
+    <div class="box" style="flex-basis: 100px;">Box 1</div>
+    <div class="box" style="flex-grow: 2;">Box 2</div>
+    <div class="box" style="flex-grow: 1;">Box 3</div>
+  </div>
 
-
-
+  <h2>8. Order</h2>
+  <div class="container">
+    <div class="box" style="order: 3;">Box 1</div>
+    <div class="box" style="order: 2;">Box 2</div>
+    <div class="box" style="order: 1;">Box 3</div>
+  </div>
 </body>
-</html> 
+</html>
