--- a/index.html
+++ b/index.html
@@ -1,101 +1,33 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Flexbox Tutorial</title>
-  <link href="./reset.css" type="stylesheet" />
-  <style>
-    :root {
-      --primary-color: green;
-    }
-
-    body {
-      font-family: Arial, sans-serif;
-      margin: 20px;
-      border: 2px dashed var(--primary-color)
-    }
-
-    .container {
-      display: flex;
-      border: 2px solid #000;
-      height: 300px;
-      margin-bottom: 40px; /* Increased margin for spacing */
-    }
-
-    .box {
-      background-color: #76b5c5;
-      border: 2px solid #444;
-      color: white;
-      padding: 20px;
-      font-size: 1.2rem;
-      text-align: center;
-      margin: 5px;
-    }
-    h2, h3 {
-      margin-top: 40px; /* Increased margin for spacing */
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
+  <title>Document</title>
 </head>
 <body>
-  <h1>Flexbox CSS Tutorial</h1>
+  <h2> Div is a block element, will take up the entire width available,   </h2>
 
-  <h2>1. Basic Flexbox Container</h2>
-  <div class="container">
-    <div class="box">Box 1</div>
-    <div class="box">Box 2</div>
-    <div class="box">Box 3</div>
-  </div>
+  <h2> Span is an Inline element, will take up only what is needed   </h2>
+  <div> div</div>
+  <span> span</span>
 
-  <h2>2. Flex Direction</h2>
-  <div class="container" style="flex-direction: column;">
-    <div class="box">Box 1</div>
-    <div class="box">Box 2</div>
-    <div class="box">Box 3</div>
-  </div>
+  <h2> We can add a height and width to a block element to adjust its place   </h2>
 
-  <h2>3. Justify Content</h2>
-  <div class="container" style="justify-content: space-between;">
-    <div class="box">Box 1</div>
-    <div class="box">Box 2</div>
-    <div class="box">Box 3</div>
-  </div>
+  <h2> With an inline element, the width and height wouldnt apply.. unless you add the display property of block; display:bl   </h2>
 
-  <h2>4. Align Items</h2>
-  <div class="container" style="align-items: center;">
-    <div class="box">Box 1</div>
-    <div class="box">Box 2</div>
-    <div class="box">Box 3</div>
-  </div>
+  <div class="block"> div </div>
+  <span class="blockspan"> span <br> width= 150px; height =150px; & display:block; </span>
+  <br>
+  <div class="inline"> div </div>
+  <span class="inlinespan"> span </span> <p> These elements have now been set to inline, and can not be adjusted using height and width</p>
+  <br>
+  <br>
+  <br>
+  <div class="inline-block"> div </div>
+  <span class="inline-block-span"> span </span> 
+  <p> These elements have now been set to inline-block and can have width and height applied</p>
 
-  <h2>5. Flex Wrap</h2>
-  <div class="container" style="flex-wrap: wrap;">
-    <div class="box" style="flex: 1 1 100px;">Box 1</div>
-    <div class="box" style="flex: 1 1 100px;">Box 2</div>
-    <div class="box" style="flex: 1 1 100px;">Box 3</div>
-    <div class="box" style="flex: 1 1 100px;">Box 4</div>
-  </div>
-
-  <h2>6. Align Content</h2>
-  <div class="container" style="flex-wrap: wrap; align-content: space-between;">
-    <div class="box" style="flex: 1 1 100px;">Box 1</div>
-    <div class="box" style="flex: 1 1 100px;">Box 2</div>
-    <div class="box" style="flex: 1 1 100px;">Box 3</div>
-    <div class="box" style="flex: 1 1 100px;">Box 4</div>
-  </div>
-
-  <h2>7. Flex Grow, Shrink, and Basis</h2>
-  <div class="container">
-    <div class="box" style="flex-basis: 100px;">Box 1</div>
-    <div class="box" style="flex-grow: 2;">Box 2</div>
-    <div class="box" style="flex-grow: 1;">Box 3</div>
-  </div>
-
-  <h2>8. Order</h2>
-  <div class="container">
-    <div class="box" style="order: 3;">Box 1</div>
-    <div class="box" style="order: 2;">Box 2</div>
-    <div class="box" style="order: 1;">Box 3</div>
-  </div>
 </body>
 </html>
