More styling to the header

--- a/index.html
+++ b/index.html
@@ -7,26 +7,26 @@
   <title>Document</title>
 </head>
 <body>
-  <h2> Div is a block element, will take up the entire width available,   </h2>
+  <h2> <em> Div</em> is a block element, <u> will</u> take up the <em> entire</em> width available,   </h2>
 
-  <h2> Span is an Inline element, will take up only what is needed   </h2>
+  <h2> <em>  Span</em>  is an Inline element, <u> will only</u>  take up  what is needed   </h2>
   <div> div</div>
   <span> span</span>
 
-  <h2> We can add a height and width to a block element to adjust its place   </h2>
+  <h2> We can add a <em>height and width </em>  to a block element to adjust its place   </h2>
 
-  <h2> With an inline element, the width and height wouldnt apply.. unless you add the display property of block; display:bl   </h2>
+  <h2> With an inline element, <em>the width and height <U> wouldnt</U> apply </em>.. unless you add the <em>display </em> property of <em> block</em>  </h2>
 
-  <div class="block"> div </div>
-  <span class="blockspan"> span <br> width= 150px; height =150px; & display:block; </span>
+  <div class="block"> div <br> width="150px;" height = 150px; <em> div is already a block so no display property needed </em> </div>
+  <span class="blockspan"> span <br> width= 150px; height =150px;  display:block; </span>
   <br>
   <div class="inline"> div </div>
   <span class="inlinespan"> span </span> <p> These elements have now been set to inline, and can not be adjusted using height and width</p>
   <br>
   <br>
   <br>
-  <div class="inline-block"> div </div>
-  <span class="inline-block-span"> span </span> 
+  <div class="inline-block"> div <br> width="150px;" height = 150px; <em> </div>
+  <span class="inline-block-span"> span <br> width="150px;" height = 150px; </span> 
   <p> These elements have now been set to inline-block and can have width and height applied</p>
 
 </body>
